# TaskMaster

./: .env.example  .env.production.example  .replit  AI_TOOL_SYSTEM_DOCUMENTATION.md  DATABASE_SETUP.md  INTEGRATION_GUIDE.md  PRACTICAL_EXAMPLES.md  README.md  RESPONSE_SYSTEM_EXPLANATION.md  SYSTEM_FLOW_DIAGRAM.md  ai_tool_executor.py  api_executor.py  app.py  elevenlabs_agent.py  elevenlabs_embedded.py  install_unix.sh  install_windows.bat  live_chat_manager.py  local_requirements.txt  migrate_response_analysis.py  migrate_to_unified_conversations.py  models.py  models_broken.py  pyproject.toml  rag_chain.py  replit.md  server-nginx-fix.sh  session_memory.py  test_bidirectional_chat.html  test_clarification_system.py  test_conversations.json  test_elevenlabs_embedded.html  test_elevenlabs_voice.html  test_feedback_buttons.html  test_live_agent_detection.html  test_live_chat.html  test_persistent_history.html  test_time_based_greeting.html  test_upload.html  test_user_api.py  (+11 more)
attached_assets/: Pasted--app-5-16-RUN-pip-install-no-cache-dir-upgrade-pip--1752907201711_1752907201712.txt  Pasted--bin-bash-TaskMaster-RAG-Chatbot-Complete-deployment-script-set-e-echo-Deploying-TaskMa-1752911518030_1752911518030.txt  Pasted-ElevenLabs-speech-recognition-result-hello-chatwidget-js-1702-ElevenLabs-speech-recognition-result--1752938938801_1752938938805.txt  Pasted-Speech-recognition-started-chatwidget-js-1529-Speech-recognition-result-how-chatwidget-js-1529-Spee-1752936865556_1752936865560.txt  (+4 more)
deployment/: DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile-fixed  Dockerfile-simple  (+27 more)
(+32 files in other folders)
